-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.1
-
05de036a8 (dev), 2243b815e (6.7), 30995a6e7 (6.6), e8af58f8a (tqtc/lts-6.5)
Problem description
The same code produces different results :
Windows (incorrect behaviour) :
![]()
macOS (expected behaviour) :
![]()
Please notice that the Windows build does not show the bold font as bold.
Steps to reproduce :
Open the attached project and run it : Deletable243523523.zip![]()
- relates to
-
QTBUG-121131 QML - Text - Font weight - macOS/Windows difference - episode 2
-
- Closed
-
| For Gerrit Dashboard: QTBUG-119995 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 525368,3 | Fix synthesized bold on Windows | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 525540,2 | Fix synthesized bold on Windows | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 525706,4 | Fix synthesized bold on Windows | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 528740,2 | Fix synthesized bold on Windows | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |